# pastecord

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  sqlx-data.json
migrations/: 20230312140315_initialize.sql  20230312170607_add_discord_user_table.sql  20230312170947_allow_user_association.sql  20230312182542_add_ip_field.sql
old-static/: application.js  highlight.min.js
src/: main.rs
src/repo/: paste.rs
static/: application.css  discord_theme.css  index.html
static/assets/: index-651bbfdf.js
ui/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: NavBar.tsx  NewPasteContent.tsx  PasteContent.tsx
