[package]
name = "pastecord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
axum-macros = "0.3.5"
chrono = { version = "0.4.23", features = ["serde"] }
serde = "1.0.155"
serde_derive = "1.0.155"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-native-tls", "uuid", "time", "chrono"] }
tokio = { version = "1.26.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
